Pythonで必要なパッケージのインストールを追記

--- a/Tutorial/Tutorial_python.ipynb
+++ b/Tutorial/Tutorial_python.ipynb
@@ -68,14 +68,63 @@
       ]
     },
     {
+      "source": [
+        "## pipのインストール"
+      ],
+      "cell_type": "markdown",
+      "metadata": {}
+    },
+    {
+      "source": [
+        "### Python 3\n",
+        "\n",
+        "https://www.python.jp/install/ubuntu/pip.html#2XQ9V7"
+      ],
+      "cell_type": "markdown",
+      "metadata": {}
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "apt install python3-pip"
+      ]
+    },
+    {
+      "source": [
+        "## 必要ライブラリのインストール"
+      ],
       "cell_type": "markdown",
       "metadata": {
         "id": "-i5r76Mp-Sv-",
         "colab_type": "text"
-      },
+      }
+    },
+    {
       "source": [
-        "## 必要ライブラリのインストール"
+        "### Python 3\n",
+        "https://www.python.jp/install/ubuntu/pip.html#2XQ9V7"
+      ],
+      "cell_type": "markdown",
+      "metadata": {}
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "pip3 install numpy matplotlib opencv-python sklearn"
       ]
+    },
+    {
+      "source": [
+        "`pip`はPython 2系のコマンドであるため、Python 3系ようにインストールした場合は、下記のコマンドではなく、`pip3`または`python3 -m pip`で実行する。"
+      ],
+      "cell_type": "markdown",
+      "metadata": {}
     },
     {
       "cell_type": "code",
@@ -1012,17 +1061,20 @@
       ]
     },
     {
-      "cell_type": "code",
+      "source": [
+        "## その他\n",
+        "### システムコマンドの実行\n",
+        "\n",
+        ">IPythonでは!lsのように先頭に!をつけることでシステムコマンド（OSコマンド / シェルコマンド）を実行できる。\n",
+        "\n",
+        "https://note.nkmk.me/jupyter-notebook-system-command/"
+      ],
+      "cell_type": "markdown",
       "metadata": {
         "id": "wAF5Q9Co-sig",
         "colab_type": "code",
         "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
+      }
     }
   ]
 }
