--- a/Tutorial/Tutorial_python.ipynb
+++ b/Tutorial/Tutorial_python.ipynb
@@ -121,7 +121,7 @@
     },
     {
       "source": [
-        "`pip`はPython 2系のコマンドであるため、Python 3系ようにインストールした場合は、下記のコマンドではなく、`pip3`または`python3 -m pip`で実行する。"
+        "`pip`はPython 2系のコマンドであるため、Python 3系をインストールした場合は、下記のコマンドではなく、`pip3`または`python3 -m pip`で実行する。"
       ],
       "cell_type": "markdown",
       "metadata": {}
